--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <a href="index.html">
+            <img src="img/logo.png" alt="logotipo">
+        </a>
+    </header>
 </body>
-</html>
+</html>å
