--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="index.html">
-            <img src="img/logo.png" alt="logotipo">
+            <img class="header__logo" src="img/logo.png" alt="logotipo">
         </a>
     </header>
+
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+    </nav>
+
+    <main class="contenedor">
+        <h1>Nuestros Productos</h1>
+    </main>
+
+    <footer class="footer">
+        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2024.</p>
+    </footer>
 </body>
-</html>å
+</html>
