--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navegacion">
         <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
-    </nav>
+    </nav> <!-- .navegacion -->
 
     <main class="contenedor">
         <h1>Nuestros Productos</h1>
