Se agrega el contenido al fichero nosotros.html.

--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,30 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Ut elementum, nunc non sollicitudin cursus, quam orci pretium leo, et fermentum lorem arcu non ipsum. Maecenas et elit nec justo ullamcorper ultricies. Praesent vehicula sapien sit amet enim pellentesque, sed ultrices urna congue. Proin at dui ac dolor pellentesque fringilla sit amet sit amet velit. Fusce vel dui pharetra, iaculis dolor vitae, finibus velit. Vivamus commodo dui vel justo porttitor, in cursus tellus congue. Curabitur vulputate convallis tortor, et posuere elit pulvinar nec. In ut accumsan velit, vel auctor dolor. Nulla eros odio, sollicitudin at consequat et, viverra id neque.</p>
+
+                <p>
+                Donec velit enim, rutrum eu libero ut, accumsan aliquam odio. Pellentesque egestas eros ac augue aliquet, in eleifend sem pharetra. Nulla et diam faucibus sem facilisis volutpat at in augue. Phasellus molestie lectus ac orci euismod, sit amet pulvinar sapien maximus. </p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">Por qué Comprar con nosotros?</h2>
+        
+
+        <div class="bloques">
+            <div class="bloque">
+                <img src="img/icono_1.png" alt="por que comprar">
+                <h3 class="bloque__titulo">El Mejor Precio</h3>
+                <p>Donec velit enim, rutrum eu libero ut, accumsan aliquam odio.</p>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos Reservados 2024.</p>
