Se agregan modificaciones al fichero nosotros.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,15 +38,32 @@
 
     <section class="contenedor comprar">
         <h2 class="comprar__titulo">Por qué Comprar con nosotros?</h2>
-        
 
         <div class="bloques">
             <div class="bloque">
-                <img src="img/icono_1.png" alt="por que comprar">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="por que comprar">
                 <h3 class="bloque__titulo">El Mejor Precio</h3>
                 <p>Donec velit enim, rutrum eu libero ut, accumsan aliquam odio.</p>
-            </div>
-        </div>
+            </div> <!-- .bloque -->
+            
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>Donec velit enim, rutrum eu libero ut, accumsan aliquam odio.</p>
+            </div> <!-- .bloque -->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Envío Gratis</h3>
+                <p>Donec velit enim, rutrum eu libero ut, accumsan aliquam odio.</p>
+            </div> <!-- .bloque -->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="por que comprar">
+                <h3 class="bloque__titulo">La Mejor Calidad</h3>
+                <p>Donec velit enim, rutrum eu libero ut, accumsan aliquam odio.</p>
+            </div> <!-- .bloque -->
+        </div> <!-- .bloques -->
     </section>
 
     <footer class="footer">
